--- a/src/CSS/sign.css
+++ b/src/CSS/sign.css
@@ -2,57 +2,57 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    background-color: #0b0e11;
+    background-color: var(--color-primary-900);
 }
-form{
+.signin-login-form{
     display: block;
     width: 450px;
     margin: 0 auto;
-    background-color: #151a21;
-    border: 1px solid #242c37;
+    background-color: var(--color-primary-800);
+    border: 1px solid var(--color-primary-700);
     padding: 15px;
     border-radius: 5px;
     margin-bottom: 20px;
     text-align: center;
     color: #fff;
 }
-form > input{
+.signin-login-form > input{
     width: 90%;
     padding-top: 8px;
     padding-bottom: 8px; 
     border-radius: 5px;
-    border:1px solid black;
+    border:1px solid var(--color-primary-900);
     font-size: 16px;
     margin-bottom: 10px;
 }
 ::placeholder{
     padding-left: 8px;
 }
-form > h3{
+.signin-login-form > h3{
     margin-bottom: 20px;
 }
 button{
-    background-color: #fd4d4d;
+    background-color: var(--color-red);
     color: #fff;
     border: none;
     border-radius: 5px;
-    box-shadow: #fd6868;
-    padding: 5px;
+    box-shadow: var(--color-red-hover);
+    padding: 3px;
     cursor: pointer;
 }
 button:hover{
-    background-color: #fd6868;
+    background-color: var(--color-red-hover);
 }
 .redirect{
     margin-top: 0.7rem;
 }
 .link{
     margin-left: 5px;
-    color: #fd4d4d;
+    color: var(--color-red);
 }
 
 @media only screen and (max-width:500px){
-    form{
+    .signin-login-form{
         width: 80%;
     }
 }
