--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -1,7 +1,7 @@
 .navbar{
     width: 100%;
-    height: 3rem;
-    border-bottom: 1px solid #242c37;
+    height: 40px;
+    border-bottom: 1px solid var(--color-primary-700);
     align-content: center;
 }
 .navbar > ul{
