--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,23 @@
-:root{
-  --color-primary-100: #dee3ea;
+/* --color-primary-100: #dee3ea;
   --color-primary-200: #b2bdcd;
   --color-primary-300: #5d7290;
   --color-primary-600: #323d4d;
   --color-primary-700: #242c37;
   --color-primary-800: #151a21;
   --color-primary-900: #0b0e11;
+  --color-secondary: #5575e7;
+  --color-red: #fd4d4d;
+  --color-red-hover: #fd6868;
+  --color-red-disabled: #f5bfbf; */
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+:root{
+  --color-primary-100: #dee3ea;
+  --color-primary-200: #b2bdcd;
+  --color-primary-300: #5d7290;
+  --color-primary-600: #323d4d;
+  --color-primary-700: #58595c;
+  --color-primary-800: #151a21;
+  --color-primary-900: #07090a;
   --color-secondary: #5575e7;
   --color-red: #fd4d4d;
   --color-red-hover: #fd6868;
@@ -26,13 +38,12 @@ body {
   box-sizing: border-box;
   background-color: var(--color-primary-900);
 }
-input:focus{
+/* input:focus{
   outline: 1px solid var(--color-primary-300);
-}
+} */
 
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   width: 7px;
-  /* display: none; */
 }
 ::-webkit-scrollbar-track{
   background: var(--color-primary-800);
@@ -43,4 +54,4 @@ input:focus{
 }
 ::-webkit-scrollbar-thumb:hover{
   background: var(--color-primary-700);
-}
+} */
