--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -9,6 +9,17 @@
     flex-direction: column;
     align-items: center;
 }
+.loader{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
 .navbar-feed{
     height: 100vh;
     display: flex;
@@ -49,7 +60,6 @@
 .modal-content > form{
     width: auto;
     border: none;
-    color: #fff;
     margin-bottom: 0;
     background-color: var(--color-primary-800);
     border: 1px solid var(--color-primary-700);
