--- a/src/CSS/post.css
+++ b/src/CSS/post.css
@@ -40,6 +40,7 @@
 .votes{
     cursor: pointer;
     display: flex;
+    gap: 4px;
 }
 input{
     padding: 5px 0; 
@@ -49,11 +50,13 @@ input{
     margin-bottom: 10px;
 }
 .comments-container{
-    transition: 1s ease-in;
-    /* does not seem to work */
+    padding: 5px;
 }
 .comment-info{
-    width: auto;
-    margin-bottom: 1px;
-    /* border: 1px solid var(--color-primary-700); */
+    width: 60%;
+    padding: 2px;
+    display: inline-block;
+    margin-bottom: 2px;
+    border-radius: 5px;
+    background: rgba(22, 27, 34, 0.82);
 }
