--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -5,12 +5,15 @@
 }
 .profile-page-elements{
     width: 50%;
-    color: #fff;
 }
 .user-profile-page{
     display: flex;
     justify-content: center;
-    color: #fff;
+}
+.back-button-container{
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
 }
 .user-profile-center{
     width: 100%;
@@ -49,7 +52,6 @@
     padding: 15px;
     border-radius: 5px;
     margin-bottom: 20px;
-    color: #fff;
 }
 .profile-pics-list{
     /* width: 40%; */
