--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,9 +1,3 @@
-/* .posts{
-    display: flex;
-    justify-content: center;
-} */
-/*TODO: I tink i have to make home as grid */
-
 .home{
     display: flex;
     flex-direction: column;
@@ -24,11 +18,11 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
 }
-/* TODO: the feed div shrinks the navbar div when comments are opened  */
 .feed{
     z-index: 0;
+    height: calc(100vh - 40px);
     overflow-y: auto;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -90,13 +84,7 @@
     margin-bottom: 4px;
 }
 
-@media only screen and (max-width: 500px){
-    .navbar-feed{
-        width: 100%;
-    }
-}
-
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 600px){
     .navbar-feed{
         width: 70%;
     }
