--- a/src/CSS/post.css
+++ b/src/CSS/post.css
@@ -25,6 +25,7 @@
     margin-right: 4px;
 }
 .post-info{
+    color: #fff;
     padding: 0.5rem 0.8rem;
     border-bottom: 1px solid var(--color-primary-600);
 }
@@ -47,16 +48,75 @@ input{
     border-radius: 5px;
     border:1px solid var(--color-primary-900);
     font-size: 14px;
-    margin-bottom: 10px;
+}
+.modal-backdrop{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.8);
+}
+.comment-modal{
+    margin: auto;
+    border: 1px solid var(--color-primary-600);
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary-800);
+}
+#comment-teaxtarea{
+    width: 100%;
+    min-height: 200px;
+    color: #fff;
+    border: none;
+    background-color: var(--color-primary-600);
+}
+.comments-page{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--color-primary-900);
 }
 .comments-container{
     padding: 5px;
+    margin: 0 auto;
+}
+.comment-profile-pic{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    margin-right: 4px;
 }
 .comment-info{
-    width: 60%;
-    padding: 2px;
+    width: 100%;
+    padding: 5px;
     display: inline-block;
     margin-bottom: 2px;
     border-radius: 5px;
     background: rgba(22, 27, 34, 0.82);
+}
+@media only screen and (min-width: 550px){
+    .modal-backdrop{
+        padding-top: 10%;
+    }
+    .comment-modal{
+        width: 60%;
+        height: auto;
+    }
+    .comments-container{
+        width: 70%;
+    }
+} 
+@media only screen and (min-width: 800px){
+    .comment-modal{
+        width: 40%;
+    }
+    .comments-container{
+        width: 50%;
+    }
 }
