--- a/src/CSS/post.css
+++ b/src/CSS/post.css
@@ -57,13 +57,14 @@ input{
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,0.8);
+    margin-top: 3%;
 }
 .comment-modal{
-    margin: auto;
+    margin: 0 auto;
     border: 1px solid var(--color-primary-600);
     border-radius: 5px;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: auto;
     background-color: var(--color-primary-800);
 }
 #comment-teaxtarea{
@@ -94,16 +95,20 @@ input{
 }
 .comment-info{
     width: 100%;
-    padding: 5px;
     display: inline-block;
     margin-bottom: 2px;
     border-radius: 5px;
     background: rgba(22, 27, 34, 0.82);
 }
+.actual-comments{
+    max-height: 50vh;
+    overflow-y: scroll;
+}
+.post-info-in-modal{
+    max-height: 30vh;
+    overflow-y: scroll;
+}
 @media only screen and (min-width: 550px){
-    .modal-backdrop{
-        padding-top: 10%;
-    }
     .comment-modal{
         width: 60%;
         height: auto;
