updated navigation and router

--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -18,6 +18,9 @@
     align-items: center;
     justify-content: space-between;
 }
+.nav-item:hover{
+    color: var(--color-red-hover);
+}
 .icon-info{
     margin-left: 3px;
 }
