--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -13,6 +13,7 @@
     top: 0;
     left: 0;
     position: fixed;
+    background: rgba(0,0,0,0.5);
 }
 .navbar-feed{
     height: 100vh;
@@ -79,9 +80,10 @@
     min-height: 100px;
 }
 #post-error-message{
-    background-color: rgba(255,0,0,0.4);
+    background-color: var(--color-red);
     display: none;
-    margin-bottom: 4px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 600px){
