--- a/src/CSS/post.css
+++ b/src/CSS/post.css
@@ -1,4 +1,3 @@
-
 .single-post-container{
     background-color: var(--color-primary-800);
     height: auto;
@@ -57,7 +56,7 @@ input{
     top: 0;
     left: 0;
     background-color: rgba(0,0,0,0.8);
-    margin-top: 3%;
+    padding-top: 3%;
 }
 .comment-modal{
     margin: 0 auto;
