--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -36,14 +36,15 @@
     flex-direction: column;
     padding: 0 3px;
 }
-#post-modal{
+.modal-backdrop{
     z-index: 1;
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    padding-top: 10%;
+    display: flex;
+    align-items: center;
     background-color: rgba(0,0,0,0.5);
 }
 .modal-content{
@@ -84,6 +85,17 @@
     display: none;
     width: 90%;
     margin: 0 auto;
+}
+.dialog-modal{
+    background-color: var(--color-primary-600);
+    margin: auto;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    min-height: 100px;
+    width: 30%;
 }
 
 @media only screen and (min-width: 600px){
