--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -97,6 +97,12 @@
     min-height: 100px;
     width: 30%;
 }
+/* .Toastify__toast-container {
+    background-color: var(--color-primary-600);
+} */
+/* .Toastify__toast--info{
+    background-color: var(--color-primary-600);
+} */
 
 @media only screen and (min-width: 600px){
     .navbar-feed{
