--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -53,7 +53,7 @@
     border-radius: 5px;
     width: 80%;
 }
-.modal-content > form{
+/* .modal-content > form{
     width: auto;
     border: none;
     margin-bottom: 0;
@@ -62,8 +62,8 @@
     padding: 15px;
     border-radius: 5px;
     text-align: center;
-}
-.modal-content > form > input{
+} */
+/* .modal-content > form > input{
     width: 90%;
     padding-top: 8px;
     padding-bottom: 8px; 
@@ -71,7 +71,7 @@
     border:1px solid var(--color-primary-900);
     font-size: 16px;
     margin-bottom: 10px;
-}
+} */
 .modal-content>form>textarea{
     width: 90%;
     padding-top: 8px;
@@ -104,7 +104,7 @@
     background-color: var(--color-primary-600);
 } */
 
-@media only screen and (min-width: 600px){
+/* @media only screen and (min-width: 600px){
     .navbar-feed{
         width: 70%;
     }
@@ -117,4 +117,4 @@
     .navbar-feed{
         width: 40%;
     }
-}
+} */
