--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -1,6 +1,7 @@
 .navbar{
     width: 100%;
     height: 40px;
+    margin-bottom: 14px;;
     border-bottom: 1px solid var(--color-primary-700);
     align-content: center;
 }
@@ -13,7 +14,7 @@
 }
 .nav-item{
     text-decoration: none;
-    color: #fff;
+    /* color: #fff; */
     display: flex;
     align-items: center;
     justify-content: space-between;
