--- a/src/CSS/post.css
+++ b/src/CSS/post.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid var(--color-primary-600);
+    /* border-bottom: 1px solid var(--color-primary-600); */
     padding: 2px 5px;
 }
 .profile-pic{
